# uniprot-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  lhm.plugin.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.well-known/mcp/: server.json
src/uniprot_mcp/: __init__.py  cheatsheet.py  client.py  config.py  formatting.py  idmapping.py  server.py
tests/: check_structure.py  smoke.py
