[project]
name = "uniprot-mcp"
version = "0.1.0"
description = "Production-quality MCP server exposing the UniProt REST API (search, entries, FASTA, ID mapping, taxonomy) to LLM clients over stdio."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "uniprot-mcp" }]
keywords = ["mcp", "uniprot", "bioinformatics", "proteins", "fastmcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/fzlzjerry/uniprot-mcp"
Repository = "https://github.com/fzlzjerry/uniprot-mcp"
Issues = "https://github.com/fzlzjerry/uniprot-mcp/issues"

[project.scripts]
uniprot-mcp = "uniprot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uniprot_mcp"]
